--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -534,8 +534,11 @@
     <color name="color_37C4AC">#37C4AC</color>
     <color name="color_EFF9F8">#EFF9F8</color>
     <color name="color_85848A">#85848A</color>
-    <color name="color_DADADA">#DADADA</color>">
+    <color name="color_DADADA">#DADADA</color>
     <color name="color_B4536A">#B4536A</color>
     <color name="color_F1F1F1">#F1F1F1</color>
+    <color name="color_465391">#465391</color>
     <color name="color_CB9797">#CB9797</color>
+    <color name="color_787E85">#787E85</color>
+    <color name="color_666666">#666666</color>
 </resources>
