--- a/MyCity4Kids/MyCity4Kids/res/drawable/ic_profile_featured.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/ic_profile_featured.xml
@@ -7,5 +7,8 @@
     android:tint="@color/profile_tab_selector">
   <path
       android:fillColor="@color/white"
-      android:pathData="M22,21.2c0,0.4 -0.4,0.8 -0.8,0.8H12c-0.4,0 -0.8,-0.4 -0.8,-0.8c0,-0.4 0.4,-0.8 0.8,-0.8h9.2C21.6,20.4 22,20.8 22,21.2L22,21.2zM21.2,17.4h-6.1c-0.4,0 -0.8,0.4 -0.8,0.8c0,0.4 0.4,0.8 0.8,0.8h6.1c0.4,0 0.8,-0.4 0.8,-0.8C22,17.7 21.6,17.4 21.2,17.4L21.2,17.4zM21.2,14.3h-3.1c-0.4,0 -0.8,0.4 -0.8,0.8s0.4,0.8 0.8,0.8h3.1c0.4,0 0.8,-0.4 0.8,-0.8S21.6,14.3 21.2,14.3L21.2,14.3zM21.8,7.9L7.9,21.8C7.8,21.9 7.6,22 7.4,22H2.8C2.3,22 2,21.6 2,21.2v-4.6c0,-0.2 0.1,-0.4 0.2,-0.6L16.1,2.2c0.3,-0.3 0.8,-0.3 1.1,0l4.6,4.6C22.1,7.1 22.1,7.6 21.8,7.9L21.8,7.9zM20.1,7.4l-3.5,-3.5l-13,13v3.5h3.5L20.1,7.4z"/>
+      android:pathData="M19.3,22H4.7c-2,0 -3.7,-1.7 -3.7,-3.9V8.6c0,-2.1 1.7,-3.9 3.7,-3.9h4.8l1,-1.9C10.8,2.3 11.4,2 12,2c0.6,0 1.2,0.3 1.5,0.9l1,1.9h4.8c2,0 3.7,1.7 3.7,3.9v9.5C23,20.3 21.3,22 19.3,22zM4.7,6.5c-1,0 -1.8,1 -1.8,2.2v9.5c0,1.2 0.8,2.2 1.8,2.2h14.6c1,0 1.8,-1 1.8,-2.2V8.6c0,-1.2 -0.8,-2.2 -1.8,-2.2h-6L12,4.1l-1.3,2.4H4.7z"/>
+  <path
+      android:fillColor="@color/white"
+      android:pathData="M13.2,10.2l2,2l-5.1,5.2l-2,-2L13.2,10.2zM16.8,9.7l-0.9,-0.9c-0.4,-0.4 -0.9,-0.4 -1.3,0l-0.9,0.9l2,2l1,-1C17.1,10.4 17.1,9.9 16.8,9.7L16.8,9.7zM7,18.2c0,0.2 0.1,0.3 0.3,0.3l2.3,-0.6l-2,-2L7,18.2zM7,18.2"/>
 </vector>
