--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_badge.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_badge.xml
@@ -19,27 +19,13 @@
             android:layout_height="wrap_content"
             android:visibility="visible">
 
-            <ImageView
-                android:id="@+id/backImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:paddingLeft="20dp"
-                android:paddingTop="20dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="20dp"
-                android:src="@drawable/back_arroow"
-                android:tint="@color/black"/>
-
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/toolbarTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/backImageView"
                 android:text="@string/badges"
-                android:textColor="@color/campaign_515151"
+                android:textColor="@color/user_articles.toolbar.title"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
 
@@ -51,8 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
-        android:layout_marginTop="@dimen/space_20"
         android:layout_marginLeft="@dimen/space_20"
+        android:layout_marginTop="@dimen/space_20"
         android:layout_marginRight="@dimen/space_20"
         android:gravity="center"
         android:horizontalSpacing="@dimen/space_10"
