--- a/MyCity4Kids/MyCity4Kids/res/layout/add_collection_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_collection_activity.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <FrameLayout
-        android:id="@+id/upperTransparentFrameLayout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/transparent"
@@ -14,10 +13,8 @@
 
 
     <RelativeLayout
-        android:id="@+id/headerRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/upperTransparentFrameLayout"
         android:background="@drawable/rootlayout_with_rounded_corner"
         android:padding="@dimen/space_15">
 
@@ -28,28 +25,32 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="@dimen/space_10"
-            android:src="@drawable/cross_icon_circle_background_black" />
+            android:src="@drawable/cross_icon_circle_background_black"
+            />
 
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="@dimen/space_15"
-            android:layout_toStartOf="@id/addNewTextView"
-            android:text="@string/dialog_fragment_add_collection_select_collection"
+            android:layout_marginRight="@dimen/space_15"
+            android:layout_toLeftOf="@id/addNewTextView"
+            android:text="Select Collection"
             android:textColor="@color/campaign_515151"
             android:textSize="18sp"
-            app:fontName="Helvetica Bold.ttf" />
+            app:fontName="Helvetica Bold.ttf"
+
+
+            />
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/addNewTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/space_15"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/space_15"
             android:background="@drawable/shape_red_border"
             android:padding="@dimen/space_10"
-            android:text="@string/profile_add_new"
+            android:text="add new"
             android:textAllCaps="true"
             android:textColor="@color/app_red"
             android:textSize="14sp" />
@@ -59,18 +60,10 @@
 
 
     <View
-        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/headerRelativeLayout"
-        android:background="#9B9B9B" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/addCollectionRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/divider"
-        android:background="@color/white" />
+        android:background="#9B9B9B" />
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer1"
@@ -94,18 +87,11 @@
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
-
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/noItemAddedTextView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/addCollectionRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center_horizontal"
-        android:text="@string/no_collections_yet"
-        android:textColor="@color/black"
-        android:textSize="@dimen/space_16"
-        android:textStyle="bold"
+        android:layout_height="match_parent"
+        android:background="@color/white" />
 
-        android:visibility="gone" />
 
-</RelativeLayout>
+</LinearLayout>
