--- a/MyCity4Kids/MyCity4Kids/res/layout/user_collection_item_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_collection_item_activity.xml
@@ -4,16 +4,13 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-
     android:background="@android:color/background_light">
 
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBar1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -27,10 +24,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:elevation="5dp"
+                android:theme="@style/ThemeOverlay.AppCompat"
                 app:layout_collapseMode="pin"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:theme="@style/ToolbarTheme"
-                app:titleTextAppearance="@style/ToolbarTheme.Title">
+                app:layout_scrollFlags="scroll|enterAlways">
 
                 <RelativeLayout
                     android:id="@+id/upperToolbarHeader"
@@ -92,29 +88,22 @@
                         android:id="@+id/collectionNameTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginStart="@dimen/space_5"
-                        android:layout_toStartOf="@+id/linearLayoutForFollowingShare"
-                        android:layout_toEndOf="@id/back"
+                        android:layout_toStartOf="@id/linearLayoutForFollowingShare"
+                        android:drawableLeft="@drawable/back_arroow"
+                        android:drawablePadding="@dimen/space_10"
                         android:ellipsize="marquee"
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         android:marqueeRepeatLimit="marquee_forever"
+                        android:padding="@dimen/space_10"
                         android:scrollHorizontally="true"
                         android:singleLine="true"
                         android:textAllCaps="true"
                         android:textColor="@color/white"
                         android:textSize="@dimen/space_18"
                         app:fontName="Helvetica Bold.ttf" />
-
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/back"
-                        android:layout_width="@dimen/space_50"
-                        android:layout_height="@dimen/space_50"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerVertical="true"
-                        android:padding="@dimen/space_10"
-                        android:src="@drawable/back_arroow" />
 
 
                 </RelativeLayout>
