--- a/MyCity4Kids/MyCity4Kids/res/layout/badges_profile_widget.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/badges_profile_widget.xml
@@ -16,24 +16,28 @@
             android:visibility="visible">
 
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_margin="2dp"
                 android:background="@color/background" />
 
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_margin="2dp"
                 android:background="@color/background" />
 
 
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_margin="2dp"
                 android:background="@color/background" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:background="@color/background" />
 
         </LinearLayout>
@@ -49,27 +53,31 @@
 
         <ImageView
             android:id="@+id/badgeImageView_1"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_margin="2dp"
             android:src="@drawable/tab1" />
 
         <ImageView
             android:id="@+id/badgeImageView_2"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_margin="2dp"
             android:src="@drawable/tab2" />
 
 
         <ImageView
             android:id="@+id/badgeImageView_3"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_margin="2dp"
             android:src="@drawable/tab3" />
 
         <ImageView
             android:id="@+id/arrowImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_margin="2dp"
             android:src="@drawable/arrow_right" />
 
     </LinearLayout>
